task list name overflow fix

--- a/src/components/task-list/task-list-table.module.css
+++ b/src/components/task-list/task-list-table.module.css
@@ -16,4 +16,7 @@
 .taskListCell {
   display: table-cell;
   vertical-align: middle;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
